--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
 	"dependencies": {
 		"luxon": "^2.3.1",
 		"object-hash": "^3.0.0",
-		"pdf-parse": "^1.1.1"
+		"pdf-parse": "^1.1.1",
+		"tsc": "^2.0.4"
 	},
 	"devDependencies": {
 		"@types/luxon": "^2.3.0",
 		"@types/object-hash": "^2.2.1",
-		"@types/pdf-parse": "^1.1.1"
+		"@types/pdf-parse": "^1.1.1",
+		"ts-node": "^10.9.1",
+		"typescript": "^5.0.4"
 	}
 }
